app-manifest/go-backend/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
    - hosts:
        - apps.techenv.dev
      secretName: echo-tls
  rules:
    - host: apps.techenv.dev
      http:
        paths:
          - pathType: Prefix
            path: "/?(.*)"
            backend:
              service:
                name: titan-clusterip
                port:
                  number: 80
          - pathType: Prefix
            path: "/backend/?(.*)"
            backend:
              service:
                name: backend-clusterip
                port:
                  number: 3000
          - pathType: Prefix
            path: "/kubeapi/?(.*)"
            backend:
              service:
                name: apiserver
                port:
                  number: 6443
          - pathType: Prefix
            path: /argocd/?(.*)"
            backend:
              service:
                name: argocd-server
                port:
                  name: http
